# logseq-mcp-server

./: .drone.yml  .gitignore  .mcp.json  AGENTS.md  Cargo.toml  LICENSE  README.md  TESTING.md  env.example
src/: lib.rs  main.rs  tools.rs
src/logseq/: api.rs
tests/: integration_tests.rs
