[package]
name = "logseq-mcp-server"
version = "0.1.0"
edition = "2024"
authors = ["James Harton <james@harton.nz>"]
license = "MIT"
description = "Model Context Protocol (MCP) server for LogSeq, providing comprehensive access to LogSeq's HTTP API"
homepage = "https://harton.dev/james/logseq-mcp-server"
repository = "https://harton.dev/james/logseq-mcp-server"
keywords = ["logseq", "mcp", "model-context-protocol", "knowledge-graph", "api"]
categories = ["api-bindings", "command-line-utilities"]
readme = "README.md"

[dependencies]
# MCP SDK with server features
rmcp = { version = "0.5.0", features = ["server", "macros", "transport-io"] }

# Async runtime (required by rmcp)
tokio = { version = "1", features = ["full"] }

# HTTP client for LogSeq API
reqwest = { version = "0.11", features = ["json"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"  # For tool parameter schemas

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Command-line argument parsing
clap = { version = "4", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
# MCP Client for testing
rmcp = { version = "0.5.0", features = ["client", "macros", "transport-io"] }
